--- a/src/App.css
+++ b/src/App.css
@@ -247,3 +247,18 @@ button {
   grid-template-columns: repeat(4, 1fr);
   grid-gap: 10px;
 }
+.btn-sign-in {
+  background: #c43421!important;
+ border-radius:0!important;
+color: #fff!important;
+padding: 10px 50px!important;
+  border-radius: 5px !important;
+}
+
+.btn-sign-up {
+  background: #4287f5!important;
+border-radius :0!important;
+color: #fff!important;
+padding: 10px 50px!important;
+  border-radius: 5px !important;
+}
